--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <!-- Footer Start -->
 
     <footer id="footer">
-        <p>Sree Narayana GuruKulam</p>
+        <p>Sree Narayana Guru</p>
         <p>a philosopher, spiritual leader<br> and social reformer in India</p>
         <div class="social">
             <a href="https://www.facebook.com/vasttcofficial"><i class="uil uil-facebook"></i></a>
